[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/Tiles/sky2.png" type="Texture" id=1]
[ext_resource path="res://worlds/button_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://worlds/feedback.gd" type="Script" id=4]

[node name="feedback" type="Node"]
script = ExtResource( 4 )

[node name="sky2" type="Sprite" parent="."]
position = Vector2( 323, 177 )
scale = Vector2( 1.785, 1.405 )
texture = ExtResource( 1 )

[node name="send_feddback" type="Button" parent="."]
margin_left = 5.17841
margin_top = 287.736
margin_right = 638.178
margin_bottom = 318.736
custom_fonts/font = ExtResource( 2 )
text = "Send feedback"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="send_feddback"]
margin_left = -1.94052
margin_top = -286.919
margin_right = 636.059
margin_bottom = -1.91882

[node name="Back" type="Button" parent="."]
margin_left = 4.11893
margin_top = 323.758
margin_right = 637.119
margin_bottom = 354.758
custom_fonts/font = ExtResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="send_feddback" to="." method="_on_send_feddback_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_send_feddback2_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_send_feddback_pressed"]
